Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1496

PHP compiler not namespacing enums

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.9
    • PHP - Compiler
    • None
    • Patch Available

    Description

      test/php$ php TestClient.php
      php TestClient.php
      ===============================
      SAFE TO IGNORE THESE IN TEST
      ===============================
      [-- snip snip --]
      ===============================
      END OF SAFE ERRORS SECTION
      ===============================

      testVoid() = void
      [-- snip snip --]
      testList({-2, -1, 0, 1, 2}) = {-2, -1, 0, 1, 2}
      testEnum(ONE)PHP Fatal error: Class 'ThriftTest_Numberz' not found in /home/aegrumet/thrift/test/php/TestClient.php on line 264

      Attachments

        1. THRIFT-1496.patch
          0.6 kB
          Andrew Grumet

        Activity

          People

            aegrumet Andrew Grumet
            aegrumet Andrew Grumet
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: