THRIFT-1496 PHP compiler not namespacing enums Patch: Andrew Grumet

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1233930 13f79535-47bb-0310-9956-ffa450edef68